# SCWD

./: GRFS2.ipynb  LICENSE  README.md  pyproject.toml  setup.py
src/scwd/: __init__.py
src/scwd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/scwd/.ipynb_checkpoints/: metrics-checkpoint.py
